# rust_writer

./: Cargo.toml  README.md
rust_writer/: Cargo.toml
rust_writer/sample_files/: impl_block.rs
rust_writer/src/: ast.rs  error.rs  lib.rs  preserver.rs  test_builder.rs
rust_writer/src/ast/: finder.rs  helpers.rs  implementors.rs  macros.rs  mutator.rs
rust_writer/src/ast/finder/: tests.rs
rust_writer/src/ast/helpers/: tests.rs
rust_writer/src/ast/implementors/: item_to_file.rs  item_to_impl.rs  item_to_mod.rs  item_to_trait.rs  token_stream_to_macro.rs
rust_writer/src/ast/mutator/: tests.rs
rust_writer/src/preserver/: tests.rs  types.rs
rust_writer/src/preserver/types/: tests.rs
rust_writer/tests/: preserver_and_ast_modifier_integration_test.rs
rust_writer_procedural/: Cargo.toml
rust_writer_procedural/src/: finder.rs  helpers.rs  lib.rs  mutator.rs  parse.rs  parse_attrs.rs
rust_writer_procedural/src/finder/: expand.rs  parse.rs
rust_writer_procedural/src/finder/expand/: tests.rs
rust_writer_procedural/src/mutator/: expand.rs  parse.rs
rust_writer_procedural/src/mutator/expand/: tests.rs
rust_writer_procedural/src/parse/: parse_attrs.rs  parse_impl_macros.rs  parse_mutator_finder_macros.rs
rust_writer_procedural/src/parse/parse_attrs/: tests.rs
rust_writer_procedural/tests/: combined_implementor_atomicity.rs  compile_fail.rs  impl_finder.rs  impl_finder_with_outliving_lifetime.rs  impl_finder_with_same_lifetime.rs  impl_from_with_outermost_macro_implementors_set_bigger_than_innermost_macro_implementors_set.rs  impl_mutator.rs  innermost_macro_implementors_not_contained_in_outermost_implementors_ok_without_impl_from.rs  local_finder_with_same_lifetime.rs  local_mutator.rs  macro_with_repeated_implementors.rs  modified_struct_using_implementor_with_generics.rs  modified_struct_with_generics.rs  modified_unit_struct.rs  partial_finding_and_mutation.rs  ui.rs
rust_writer_procedural/tests/ui/: finder_fails_if_crate_implementor_doesnt_implement_to_find.rs  finder_fails_if_crate_implementor_doesnt_implement_to_find.stderr  finder_fails_if_implementor_isnt_clone.rs  finder_fails_if_implementor_isnt_clone.stderr  finder_fails_if_implementor_isnt_debug.rs  finder_fails_if_local_implementor_not_find_method.rs  finder_fails_if_local_implementor_not_find_method.stderr  finder_fails_if_local_implementor_used_without_local_keyword.rs  finder_fails_if_to_find_not_in_scope.rs  finder_fails_if_to_find_not_in_scope.stderr  finder_fails_if_visit_not_in_scope.rs  finder_fails_if_visit_not_in_scope.stderr  finder_fails_to_use_from_method_without_impl_from.rs  finder_fails_to_use_from_method_without_impl_from.stderr  impl_finder_fails_if_attr_lifetime_doesnt_life_enough.rs  impl_finder_fails_if_attr_lifetime_doesnt_life_enough.stderr  impl_finder_fails_if_attr_not_lifetime.rs  impl_finder_fails_if_attr_not_lifetime.stderr  impl_finder_fails_if_found_field_isnt_array.rs  impl_finder_fails_if_found_field_isnt_array.stderr  impl_finder_fails_if_found_field_isnt_bool_array.rs  impl_finder_fails_if_found_field_isnt_bool_array.stderr  impl_finder_fails_if_lifetime_not_specified.rs  impl_finder_fails_if_lifetime_not_specified.stderr  impl_finder_fails_if_not_applied_to_struct.rs  impl_finder_fails_if_not_applied_to_struct.stderr  impl_finder_fails_if_not_field_called_found_in_implementor.rs  impl_finder_fails_if_not_field_called_found_in_implementor.stderr  impl_finder_fails_if_struct_not_visit.rs  impl_finder_fails_if_struct_not_visit.stderr  impl_mutator_fails_if_mutated_field_isnt_array.rs  impl_mutator_fails_if_mutated_field_isnt_array.stderr  impl_mutator_fails_if_mutated_field_isnt_bool_array.stderr  impl_mutator_fails_if_not_applied_to_struct.rs  impl_mutator_fails_if_not_applied_to_struct.stderr  impl_mutator_fails_if_not_field_called_mutated_in_implementor.rs  impl_mutator_fails_if_not_field_called_mutated_in_implementor.stderr  impl_mutator_fails_if_struct_isnt_debug.rs  impl_mutator_fails_if_struct_isnt_debug.stderr  impl_mutator_fails_if_struct_not_visit_mut.stderr  (+59 more)
rust_writer_procedural/tests/ui/compile_fail/: impl_mutator_fails_if_mutated_field_isnt_array.stderr  impl_mutator_fails_if_mutated_field_isnt_bool_array.rs  impl_mutator_fails_if_mutated_field_isnt_bool_array.stderr  impl_mutator_fails_if_not_applied_to_struct.stderr  impl_mutator_fails_if_not_field_called_mutated_in_implementor.stderr  (+32 more)
src/: expand.rs  (+3 more)
test_builder/: Cargo.toml
test_builder/sample_files/: complete_file.rs  expanded_file.rs  file.rs  impl_block.rs  macro.rs  mod.rs  non_preservable_file.rs  preserved_file.rs  resolved_file.rs  trait.rs  trait_and_impl_block.rs
test_builder/src/: lib.rs
(+94 files in other folders)
