[workspace]
resolver = "2"
members = ["rust_writer", "rust_writer_procedural", "test_builder"]

[workspace.package]
version = "1.0.0"
repository = "https://github.com/tsenovilla/rust_writer"
license = "GPL-3.0"
rust-version = "1.84.0"
edition = "2021"
description = "This crate is useful for editing a Rust file from Rust code. The polkadot-sdk feature enables functions to edit common files in projects using the polkadot-sdk"
documentation = "https://docs.rs/rust_writer"

[workspace.dependencies]
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
syn = "2.0.98"
thiserror = "2.0.11"
quote = "1.0.38"
rustilities = "2.1.0"
rust_writer = { path = "./rust_writer/" }
rust_writer_procedural = { path = "./rust_writer_procedural/" }
test_builder = { path = "./test_builder/" }
