[workspace]
resolver = "2"
members = ["rust_writer", "rust_writer_proc", "test_builder"]

[workspace.package]
version = "1.0.4"
repository = "https://github.com/tsenovilla/rust_writer"
license = "GPL-3.0"
rust-version = "1.84.0"
edition = "2021"
description = "This crate is useful for editing a Rust file from Rust code"
documentation = "https://docs.rs/rust_writer"

[workspace.dependencies]
prettyplease = "0.2.29"
proc-macro2 = "1.0.93"
syn = "2.0.100"
thiserror = "2.0.11"
quote = "1.0.38"
regex = "1.11.1"
rustilities = "2.2.0" 
rust_writer = { path = "./rust_writer/" }
test_builder = { path = "./test_builder/" }

[patch.crates-io]
rust_writer_proc = { path = "./rust_writer_proc" }
