[package]
name = "rust_writer"
version.workspace = true
repository.workspace = true 
license.workspace = true
rust-version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
rust_writer_procedural = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.16.0"
test_builder = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
